--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,18 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <div class="bg-info rounded" style="padding: 5%;">
+        <h1 class="mt-5">OMG! you will not belive me but...</h1>
+        <h4 class="mt-5" id="excuse">My dog eat my homework.</h4>
+        <img
+          style="width: 18rem;"
+          src="https://png.pngtree.com/png-vector/20221012/ourmid/pngtree-no-excuses-stamp-vector-red-vector-png-image_14991054.png"
+        />
+      </div>
+
       <div class="fixed-bottom p-4">
         Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        <a href="https://github.com/Rociosantos18">Rocio Santos</a>
       </div>
     </div>
   </body>
